# tayloranalysis

./: .gitignore  .gitlab-ci.yml  NewTaylorAnalysisBase.py  README.md  example.py  pyproject.toml  requirements.txt  requirements4dev.txt  setup.py  taylor.py  test.py  test_existing_vs_new.ipynb
data/: create_data.py
data/binary/: create_binary.py  data.pickle
data/multivariate/: create_multivariate.py  multiclass_data.pickle
example/: example.ipynb  example.py  helpers.py  multiclass_example.py  proof_of_concept.ipynb
examples/: example_dnn.ipynb  example_dnn_multiprocessing.ipynb  example_dnn_multiprocessing.py  example_gnn.ipynb  helpers.py
examples/multi_node/: example_multiclass.py  node_0_1_coefficients.csv  node_0_coefficients.csv  node_1_coefficients.csv  node_2_coefficients.csv  node_all_coefficients.csv
examples/single_node/: example_binary.py  node_all_coefficients.csv
legacy/: README.md
legacy/data/multivariate/: create_multivariate.py
legacy/tayloranalysis/: __init__.py
src/: __init__.py
src/tayloranalysis/: __init__.py  cls.py  model_extension.py  test.py
tayloranalysis/: __init__.py  cls.py  plots.py  tayloranalysis.py  utils.py
tayloranalysis/src/: TaylorCoefficientBase.py
tests/: test.ipynb  test_model_extention.py  test_tc_computation.py
