[tool.poetry]
name = "tayloranalysis"
version = "0.2.0"
description = "Taylorcoefficient Analysis for pytorch models"
authors = ["Artur Monsch <artur.monsch@kit.edu>", "Lars Sowa <lars.sowa@kit.edu>"]
license = "{file = \"LICENSE\"}"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.4"
ipython = "8.12.3"
coverage = "7.5.0"
jupyter-client = "8.6.1"
jupyter-core = "5.7.2"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
matplotlib = "3.7.5"
seaborn = "0.13.2"


[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
